[package]
name = "rusty-loadbalancing"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
redis = "0.24"
clap = { version = "4.0", features = ["derive"] }
tokio-rustls = "0.23"
rustls = "0.21"
rcgen = "0.9"
rustls-pemfile = "1.0"
futures-util = "0.3.31"
futures = "0.3.31"