[package]
name = "rusty-loadbalancing"
version = "1.1.2"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
redis = "0.24"
clap = { version = "4.0", features = ["derive"] }
tokio-rustls = "0.23"
rustls = "0.21"
rcgen = "0.9"
rustls-pemfile = "1.0"
rand = "0.8"
sha2 = "0.11.0-pre.4"
hex = "0.4.3"
ipnetwork = "0.20.0"