[package]
name = "rusty-loadbalancing"
version = "1.4.0"
edition = "2021"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true
debug = 0
overflow-checks = false
incremental = false

[profile.release.package."*"]
codegen-units = 1
opt-level = 3

[dependencies]
bytes = "1.5"
clap = { version = "4.0", features = ["derive"] }
dashmap = "5.5"
fastrand = "2.0"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
parking_lot = "0.12"
rcgen = "0.11"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
rustls = "0.21"
rustls-pemfile = "1.0"
serde = { version = "1.0", features = ["derive"] }
siphasher = "1.0"
tokio = { version = "1.36", features = ["rt-multi-thread", "net", "io-util", "sync", "signal", "macros"] }
tokio-rustls = "0.24"
toml = "0.8"
tracing = "0.1"